# syracuse

./: .gitignore  LICENSE  Pipfile  README.md  generate_outputs.py  pyproject.toml
outputs/: alpha_attachment_bins_1000.csv  alpha_attachment_bins_1000.md  alpha_window_persistence.csv  alpha_window_report.md  block_arithmetic.csv  block_arithmetic.md  block_attachment_bins_1000.csv  block_attachment_bins_1000.md  dense_support_report_1_to_10000.md  dense_support_resolution_comparison_1_to_10000.md  dense_support_thresholds_1_to_10000.csv  density_1_to_1000.csv  density_1_to_10000.csv  density_report_1_to_1000.md  density_report_1_to_10000.md  epsilon_fit_report.md  epsilon_sweep_bins_1000.csv  epsilon_sweep_bins_1000.md  epsilon_sweep_bins_2000.csv  epsilon_sweep_bins_2000.md  epsilon_sweep_consolidated_bins_1000.csv  epsilon_sweep_million_comparison.md  epsilon_sweep_robustness_note.md  heatmap_resolution_comparison_1_to_10000.md  hypotheses_1_to_1000.md  hypotheses_1_to_10000.md  normalized_dense_support_report_1_to_10000_bins_1000.md  normalized_dense_support_report_1_to_10000_bins_2000.md  normalized_dense_support_resolution_comparison_1_to_10000.md  normalized_dense_support_thresholds_1_to_10000_bins_1000.csv  normalized_dense_support_thresholds_1_to_10000_bins_2000.csv  odd_compression_report_1_to_1000.md  odd_compression_report_1_to_10000.md  odd_compression_summary_1_to_1000.csv  odd_compression_summary_1_to_10000.csv  parity_heatmap_report_1_to_1000.md  parity_heatmap_report_1_to_10000.md  parity_prefixes_1_to_1000.csv  parity_prefixes_1_to_10000.csv  (+9 more)
(+29 files in other folders)
